--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ dependencies = [
     "pydantic~=2.7.0",
     "pyotp~=2.8.0",
     "python-dateutil~=2.8.2",
+    "python3-saml~=1.16.0",
     "pytz==2023.3",
     "rauth~=0.7.3",
     "redis~=5.0.1",
@@ -103,27 +104,27 @@ dev = [
     "responses==0.23.1",
     # typechecking
     "basedmypy",
-    "types-PyMySQL",  
-    "types-PyYAML",  
-    "types-Pygments",  
-    "types-beautifulsoup4",  
-    "types-bleach",  
-    "types-cffi",  
-    "types-colorama",  
-    "types-croniter",  
-    "types-decorator",  
-    "types-ldap3",  
-    "types-oauthlib",  
-    "types-openpyxl",  
-    "types-passlib",  
-    "types-psutil",  
-    "types-psycopg2",  
-    "types-python-dateutil",  
-    "types-pytz",  
-    "types-requests",  
-    "types-six",  
-    "types-vobject",  
-    "types-zxcvbn",  
+    "types-PyMySQL",
+    "types-PyYAML",
+    "types-Pygments",
+    "types-beautifulsoup4",
+    "types-bleach",
+    "types-cffi",
+    "types-colorama",
+    "types-croniter",
+    "types-decorator",
+    "types-ldap3",
+    "types-oauthlib",
+    "types-openpyxl",
+    "types-passlib",
+    "types-psutil",
+    "types-psycopg2",
+    "types-python-dateutil",
+    "types-pytz",
+    "types-requests",
+    "types-six",
+    "types-vobject",
+    "types-zxcvbn",
 ]
 test = [
     "unittest-xml-reporting~=3.2.0",
